fix: align all items in forms login/reg to flex-end

--- a/src/pages/LoginPage/LoginPage.module.scss
+++ b/src/pages/LoginPage/LoginPage.module.scss
@@ -12,7 +12,7 @@
     position: relative;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-end;
     .backButton {
       position: absolute;
       top:15px;
